2014-11-29  Karl Berry  <karl@tug.org>

	* dvipdfmx.c (show_usage): use [all pages] instead of (-).
	From peb.

2014-11-28  Karl Berry  <karl@tug.org>

	* dvipdfmx.c (main): accept --extractbb per help message.
	(show_usage): one line of description.
	* xbb.c (show_usage): likewise.
	Suggestion from Tom Schneider, texhax 22 Nov 2014 08:53:19.

2014-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.c: Modified support to make DLL(s) in W32TeX.

2014-11-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Support to make DLL in W32TeX.

2014-11-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Check if fqpn == NULL in dpx_open_file(), because
	MESG (fqpn) crashes if fqpn == NULL.

2014-11-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pkfont.c: Fix the messed up formatting codes.
	* pdfparse.c: Avoid undefined behaviour when char is signed.

2014-11-03  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdev.c: Do not convert integer part of real numbers to long int
	when printing a real number.
	* pdfparse.c: Do not use temporary integer values for storing
	parsed numbers.
	* pkfont.c: Remove debugging codes, additional fixes in formatting
	integer values.

2014-10-29  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pkfont.c: Cast unsigned integers when they appear in subtractions
	to obtain results in double.

2014-10-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_dvips.c: Add " showpage\n" to a temporary file gs_in because
	Ghostscript 9.15 gives an empty pdf without it
	in dpx_file_apply_filter().

2014-10-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_dvips.c: Fix a bug in spc_dvips_at_end_page (void), that is
	change "if (!temporary_defs)" to "if (temporary_defs)".

2014-09-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: Minor cleanup.

2014-09-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* {bmp,jp2,jpeg,png}image.[ch], xbb.c: More cleanup (whitespace
	and long => int or uint32_t).
